<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="rating">Rating</string>
    <string name="genre">Genre</string>
    <string name="description">Description</string>
    <string name="change_language">Change Language</string>
    <string name="tab_title_movies">Movies</string>
    <string name="tab_title_tv">Tv Shows</string>
    <string name="movie">Movie</string>
    <string name="tv">Tv</string>
    <string name="tv_detail">Tv Detail</string>
    <string name="movie_detail">Movie Detail</string>


    <string-array name="res_name">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity Wars</item>
        <item>BirdBox</item>
        <item>Bohemian Rhapsody</item>
        <item>BumbleBee</item>
        <item>Once Upon a Deadpool</item>
        <item>How To Train Your Dragon: The Hidden World</item>
        <item>Robin Hood</item>
        <item>Spiderman Into The Spider-Verse</item>
    </string-array>

    <string-array name="res_tv_name">
        <item>Arrow</item>
        <item>Doom Patrol</item>
        <item>The Flash</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Hanna</item>
        <item>Naruto Shipudden</item>
        <item>NCIS</item>
        <item>The Simpsons</item>
        <item>The Walking Dead</item>
    </string-array>

    <string-array name="res_tv_desc">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>The Doom Patrol\'s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his newfound powers, Barry is shocked to discover he is not the only "meta-human" who was created in the wake of the accelerator explosion and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it won\'t be long before the world learns what Barry Allen has become The Flash.</item>
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night\'s Watch, is all that stands between the realms of men and icy horrors beyond.</item>
        <item>Everyone knows the name Commissioner Gordon. He is one of the crime world\'s greatest foes, a man whose reputation is synonymous with law and order. But what is known of Gordon\'s story and his rise from rookie detective to Police Commissioner? What did it take to navigate the multiple layers of corruption that secretly ruled Gotham City, the spawning ground of the world\'s most iconic villains? And what circumstances created them – the larger-than-life personas who would become Catwoman, The Penguin, The Riddler, Two-Face and The Joker?</item>
        <item>This thriller and coming-of-age drama follows the journey of an extraordinary young girl as she evades the relentless pursuit of an off-book CIA agent and tries to unearth the truth behind who she is. Based on the 2011 Joe Wright film.</item>
        <item>Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few (more dangerous) enemies, in the likes of the shinobi organization; Akatsuki.</item>
        <item>From murder and espionage to terrorism and stolen submarines, a team of special agents investigates any crime that has a shred of evidence connected to Navy and Marine Corps personnel, regardless of rank or position.</item>
        <item>Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family; Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general.</item>
        <item>Sheriff\'s deputy Rick Grimes awakens from a coma to find a post-apocalyptic world dominated by flesh-eating zombies. He sets out to find his family and encounters many other survivors along the way.</item>
    </string-array>

    <string-array name="res_desc">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder and zero F\'s.</item>
        <item>As Hiccup fulfills his dream of creating a peaceful dragon utopia, Toothless\' discovery of an untamed, elusive mate draws the Night Fury away. When danger mounts at home and Hiccup\'s reign as village chief is tested, both dragon and rider must make impossible decisions to save their kind.</item>
        <item>A war-hardened Crusader and his Moorish commander mount an audacious revolt against the corrupt English crown.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson "Kingpin" Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
    </string-array>

    <string-array name="res_tv_rating">
        <item>TV-14</item>
        <item>TV-MA</item>
        <item>TV-PG</item>
        <item>TV-MA</item>
        <item>TV-14</item>
        <item>TV-MA</item>
        <item>TV-14</item>
        <item>TV-14</item>
        <item>TV-PG</item>
        <item>TV-MA</item>
    </string-array>

    <string-array name="res_rating">
        <item>R</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>R</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>PG-13</item>
        <item>PG</item>
        <item>PG-13</item>
        <item>PG</item>
    </string-array>

    <string-array name="res_tv_genre">
        <item>Crime, Drama, Mystery, Action</item>
        <item>Sci-Fi, Fantasy, Action, Adventure</item>
        <item>Drama, Sci-Fi, Fantasy</item>
        <item>Sci-Fi, Fantasy, Drama</item>
        <item>Drama, Fantasy, Crime</item>
        <item>Action, Adventure, Drama</item>
        <item>Animation, Comedy, Drama</item>
        <item>Action,Adventure, Crime, Drama</item>
        <item>Animation, Comedy</item>
        <item>Action, Adventure, Drama, Sci-Fi, Fantasy</item>
    </string-array>

    <string-array name="res_genre">
        <item>Drama, Romance, Music</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Adventure, Science Fiction</item>
        <item>Thriller, Drama</item>
        <item>Drama, Music</item>
        <item>Action, Science Fiction</item>
        <item>Comedy, Action</item>
        <item>Animation, Family, Adventure</item>
        <item>Adventure, Action, Thriller</item>
        <item>Action, Animation, Science Fiction</item>
    </string-array>

    <array name="res_photo">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
    </array>

    <array name="res_tv_photo">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_god</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_hanna</item>
        <item>@drawable/poster_naruto_shipudden</item>
        <item>@drawable/poster_ncis</item>
        <item>@drawable/poster_the_simpson</item>
        <item>@drawable/poster_the_walking_dead</item>
    </array>

</resources>
