<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MovieDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="150dp"
        android:layout_height="220dp"
        android:layout_below="@id/appbar"
        android:layout_margin="10dp"
        android:contentDescription="@string/poster" />

    <TextView
        android:id="@+id/tv_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/img_poster"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/title"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_view_title"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/img_poster"
        android:fontFamily="@font/roboto"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/tv_view_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/img_poster"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/rating"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_view_rating"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/img_poster"
        android:fontFamily="@font/roboto"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/tv_view_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_rating"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/img_poster"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/genre"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_view_genre"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/img_poster"
        android:fontFamily="@font/roboto"
        android:textSize="15sp" />
    <TextView
        android:id="@+id/tv_view_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_poster"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="17sp" />
    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_view_desc"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto"
        android:textSize="15sp" />

</RelativeLayout>